INTERNAL-411-152; fix sidebar aditional style issue on mobile

--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/app.scss
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/app.scss
@@ -161,7 +161,7 @@ h3 {
 }
 
 .sidebar-additional {
-  @apply transition-all md:max-w-[275px] whitespace-nowrap overflow-hidden;
+  @apply transition-all md:max-w-[275px] md:whitespace-nowrap md:overflow-hidden;
 }
 
 .plp-grid-wrapper--full {
